# swagger.json
@@ -5,6 +5,15 @@
     "version": "1.0.0",
     "description": "API para login, registro, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
   "paths": {
     "/register": {
       "post": {
@@ -66,6 +75,9 @@
     "/transfer": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -91,6 +103,9 @@
     "/transfers": {
       "get": {
         "summary": "Consultar transferências",
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "responses": {
           "200": { "description": "Lista de transferências" }
         }
